--- a/src/public/css/user/userBody.css
+++ b/src/public/css/user/userBody.css
@@ -21,10 +21,18 @@ body {
   display: inline-block;
   margin-left: auto;
   margin-right: 0;
-  bottom: 60px;
+  bottom: 70px;
   right: 5px;
   position: fixed;
-  i { font-size: 50px; background-color: transparent };
+  span {
+    display: block;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    animation: ring 1.5s infinite;
+    i { font-size: 50px; color: #e17640 };
+  }
   .dropup-content {
     display: none;
     position: absolute;
@@ -48,11 +56,16 @@ body {
   display: inline-block;
   margin-left: auto;
   margin-right: 0;
-  bottom: 5px;
+  bottom: 10px;
   right: 5px;
   position: fixed;
   cursor: pointer;
-  i { font-size: 50px; background-color: transparent };
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  animation: ring 1.5s infinite;
+  i { font-size: 50px; color: #e17640 };
 }
 .chat-box {
   background-color: white;
@@ -69,11 +82,24 @@ body {
     border-top-right-radius: 10px;
     top: 0;
     height: 50px;
-    background-color: #D1A6A6;
+    background-color: #FFFFFF;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 10px;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 3px 5px 0 rgba(0, 0, 0, 0.19);
+    i { color: #D1A6A6;}
+    .icon {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 5px;
+      img {
+        border-radius: 50%;
+        width: 35px;
+        aspect-ratio: 1/1;
+      }
+    }
     .minimize {
       width: 20px;
       height: 20px;
@@ -95,32 +121,66 @@ body {
   }
   .chat-content {
     height: 300px;
-    display: flex;
     overflow-y: scroll;
-    ul {
-      box-sizing: border-box;
-      width: 50%;
-      height: 100%;
-      margin-block-start: 0px;
-      margin-block-end: 0px;
-      padding-inline-start: 0px;
+    box-sizing: border-box;
+    width: 100%;
+    margin-block-start: 0px;
+    margin-block-end: 0px;
+    padding-inline-start: 0px;
+    padding: 10px;
+    li {
+      background-color: #FFDFDF;
+      border-radius: 10px;
       padding: 10px;
+      list-style: none;
+      margin-top: 5px;
+      max-width: 200px;
+      width: fit-content;
+      word-wrap: break-word;
+      display: block;
+      clear: both;
+    }
+    .right-content {
+      float: right;
+    }
+    .left-content {
+      display: flex;
+      align-items: start;
+      justify-content: start;
+      gap: 5px;
+      img {
+        margin-top: 5px;
+        border-radius: 50%;
+        width: 30px;
+        aspect-ratio: 1/1;
+      }
+      li {
+        background-color: #f0f0f0;
+      }
     }
   }
-  .input {
+  .chat-content::-webkit-scrollbar-track {
+    background: white;
+  }
+  .input-form {
     height: 50px;
     display: flex;
     align-items: center;
     padding: 0 5px;
     gap: 5px;
-    input {
+    textarea {
       width: 80%;
       height: 40px;
       padding: 0 5px;
       border-radius: 10px;
       border: 1px solid #D1A6A6;
+      word-wrap: break-word;
+      resize: none;
+      box-sizing: border-box;
+      padding: 10px 5px 0 5px;
+      font-family: 'Roboto', sans-serif;
     }
-    input:focus {
+    textarea:focus {
       outline: 1px solid #D1A6A6;
     }
     .send-btn {
@@ -168,4 +228,15 @@ body {
 }
 @keyframes reloader {
   to { transform: rotate(360deg); }
+}
+@keyframes ring {
+  0% {
+    rotate: 10deg;
+  }
+  50% {
+    rotate: -10deg;
+  }
+  100% {
+    rotate: 10deg;
+  }
 }
