--- a/src/public/css/user/userHeader.css
+++ b/src/public/css/user/userHeader.css
@@ -84,6 +84,8 @@ header {
     right: 20px;
     top: 60px;
     z-index: 5;
+    padding: 5px;
+    gap: 5px;
     a {
       padding: 10px;
       display: flex; 
@@ -94,6 +96,7 @@ header {
       color: black;
       margin-block-start: 0;
       margin-block-end: 0;
+      border-radius: 5px;
     };
     a:hover { 
       color: red;
