--- a/src/resource/views/admin/allProducts.hbs
+++ b/src/resource/views/admin/allProducts.hbs
@@ -38,7 +38,7 @@
           <td style="
                 display: flex; 
                 justify-content: start;
-                align-items: center
+                align-items: center;
                 "
           >
             <img src="{{this.img.path}}" alt="{{this.name}}" loading="lazy" loading="lazy"> 
