--- a/src/resource/views/partials/adminSidebar.hbs
+++ b/src/resource/views/partials/adminSidebar.hbs
@@ -19,7 +19,7 @@
     <a href="/admin/all-stores" class="sidebar-button" id="stores"><i class="fi fi-rr-store-alt"></i><p>Cửa hàng</p></a>
     <a href="/admin/all-employees" class="sidebar-button" id="employees"><i class="fi fi-rr-users"></i><p>Nhân sự</p></a>
     <a href="/admin/all-products?page=1&type=" class="sidebar-button" id="products"><i class="fi fi-rr-box-open"></i><p>Sản Phẩm</p></a>
-    <a href="/admin/all-brands" class="sidebar-button" id="brands"><i class="fi fi-rr-box-open"></i><p>Đối tác</p></a>
+    <a href="/admin/all-brands" class="sidebar-button" id="brands"><i class="fi fi-rr-supplier"></i></i></i><p>Đối tác</p></a>
     <a href="/admin/all-products/trash" class="sidebar-button" id="trash"><i class="fi fi-rr-trash"></i><p>Kho</p></a>
     <a class="sidebar-button" id="update-profile"><i class="fi fi-rr-circle-user"></i><p>Thông Tin Cá Nhân</p></a>
     <a href="/authentication/sign-in" class="sidebar-button" id="log-out"><i class="fi fi-rr-exit"></i><p>Đăng Xuất</p></a>
