--- a/src/resource/views/admin/allEmployees.hbs
+++ b/src/resource/views/admin/allEmployees.hbs
@@ -1,6 +1,6 @@
 <div class="admin-all-products-container">  
   <div class="board-title">
-    <p>Tổng sản phẩm: {{productLength}}</p>
+    <p>Tổng nhân sự: {{productLength}}</p>
   </div>
 
   <div class="filter-and-create">
@@ -12,7 +12,7 @@
 
     <a href="/admin/create/product" class="create-product" id="create-product">
       <i class="fi fi-br-layer-plus"></i>
-      <p>Thêm Sản Phẩm</p>
+      <p>Thêm nhân sự</p>
     </a>
   </div>
 
