--- a/src/resource/views/users/signIn.hbs
+++ b/src/resource/views/users/signIn.hbs
@@ -26,7 +26,7 @@
           <button title="submit" type="submit">Đăng nhập</button>
         </div>
         
-        <div class="form-group">
+        {{!-- <div class="form-group">
           <div class="other-login-methods">
             Đăng nhập bằng tài khoản khác
           </div> 
@@ -34,15 +34,16 @@
             <i class="fi fi-brands-facebook"></i>
             <i class="fi fi-brands-google"></i>
           </div>
-        </div>
+        </div> --}}
 
         <div class="sign-up">
-          <p>Bạn chưa có tài khoản sao ?</p>
+          <p>Bạn chưa có tài khoản ?</p>
           <a href="/authentication/sign-up"><p style="color: red; text-decoration:underline">Đăng kí ngay thôi</p></a>
           <a href="/home"><p style="color: red; text-decoration:underline">Tiếp tục Shopping</p></a>
         </div>
       </form>
     </div>
+    <a href="/emp/authentication/sign-in" class="emp-sign-in"></a>
   </div>
 </div>
 
