--- a/src/public/css/empty/signIn.css
+++ b/src/public/css/empty/signIn.css
@@ -99,6 +99,15 @@
         }
       }
     }
+    .emp-sign-in {
+      position: fixed;
+      bottom: 0;
+      right: 0;
+      left: auto;
+      width: 30px;
+      height: 30px;
+      background: linear-gradient(to bottom right, #FFDFDF 0%, #FFDFDF 50%, #D1A6A6 50%, #D1A6A6 100%)
+    }
   }
 }
 @media screen and (max-width: 700px) {
