--- a/src/resource/views/admin/signIn.hbs
+++ b/src/resource/views/admin/signIn.hbs
@@ -2,8 +2,8 @@
   <div class="sign-in-form">
     <img src="https://res.cloudinary.com/bunny-store/image/upload/v1730102111/web-img/4_lnwzuk_jkpls2.jpg" alt="login_img" loading="lazy">
     <div class="form-input">
-      <p class="form-title">Đăng nhập</p>
-      <form id="form-3" method="post" action="/authentication/checking-account">
+      <p class="form-title">Đăng nhập nhân viên</p>
+      <form id="form-3" method="post" action="/emp/authentication/checking-account">
         <div class="form-group">
           <input type="text" class="form-control" id="email" name="email" placeholder="Tài khoản">
           <span class="form-message"></span>
@@ -24,22 +24,6 @@
 
         <div class="form-action">
           <button title="submit" type="submit">Đăng nhập</button>
-        </div>
-        
-        <div class="form-group">
-          <div class="other-login-methods">
-            Đăng nhập bằng tài khoản khác
-          </div> 
-          <div class="other-login-methods-logo">
-            <i class="fi fi-brands-facebook"></i>
-            <i class="fi fi-brands-google"></i>
-          </div>
-        </div>
-
-        <div class="sign-up">
-          <p>Bạn chưa có tài khoản sao ?</p>
-          <a href="/authentication/sign-up"><p style="color: red; text-decoration:underline">Đăng kí ngay thôi</p></a>
-          <a href="/home"><p style="color: red; text-decoration:underline">Tiếp tục Shopping</p></a>
         </div>
       </form>
     </div>
